--- a/index.html
+++ b/index.html
@@ -11,39 +11,17 @@
         <h1>Welcome to Our Accountancy Services</h1>
         <nav>
             <ul>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <section id="services">
-        <h2>Our Services</h2>
-        <ul>
-            <li>Bookkeeping</li>
-            <li>Tax Preparation</li>
-            <li>Financial Planning</li>
-            <li>Payroll Management</li>
-        </ul>
-    </section>
-
-    <section id="about">
-        <h2>About Us</h2>
-        <p>We are a team of professional accountants dedicated to helping businesses and individuals manage their finances efficiently.</p>
-    </section>
-
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <form id="contactForm">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
+    <section id="content">
+        <h2>Our Expertise in Accounting</h2>
+        <p>We provide top-notch accounting services to help manage your finances efficiently.</p>
     </section>
 
     <footer>
@@ -53,3 +31,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
